# rust-reachy_camera_autofocus

./: README.md  install-opencv.sh  ros2_rust_foxy.repos  ros2_rust_galactic.repos  ros2_rust_humble.repos  ros2_rust_rolling.repos
crates/auto_focus/: Cargo.toml  build.rs  package.xml
crates/auto_focus/launch/: camera_auto_focus.launch.xml
crates/auto_focus/src/: camera_focus.rs  opencv_canny.rs
crates/campub/: Cargo.toml  build.rs  camera_publisher.py  package.xml
crates/campub/src/: camera_publisher.rs
crates/controller/: Cargo.toml  package.xml
crates/controller/src/: camera_zoom_service.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  main.rs  side_zoom_focus.rs
crates/zoom_kurokesu_rust/: Cargo.toml  zoom_kurokesu.py
crates/zoom_kurokesu_rust/src/: lib.rs  main.rs
