[package]
name = "auto_focus"
version = "0.1.0"
edition = "2021"
# workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "camera_focus"
path = "src/camera_focus.rs"


[package.metadata.ros]
install_to_share = ["launch"]

[dependencies]
anyhow = "*"
image = "*"
ndarray = "*"
opencv = { version = "*", features = ["clang-runtime"] }

reachy_msgs = "*"
sensor_msgs = "*"
rclrs = "*"
futures = "*"
utils = { path = "../utils" }


[profile.dev] #make debug profile as release profile
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
# [profile.dev] #debug default profile
# opt-level = 0
# debug = true
# # split-debuginfo = '...'  # Platform-specific.
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 256
# rpath = false
