[package]
name = "controller"
version = "0.1.0"
edition = "2021"
# workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "camera_zoom_service"
path = "src/camera_zoom_service.rs"

[dependencies]
reachy_msgs = "*"
sensor_msgs = "*"
rclrs = "*"
futures = "*"
anyhow = "*"

utils = { path = "../utils" }
zoom_kurokesu_rust = { path = "../zoom_kurokesu_rust" }


[profile.dev] #make debug profile as release profile
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
# [profile.dev] #debug default profile
# opt-level = 0
# debug = true
# # split-debuginfo = '...'  # Platform-specific.
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 256
# rpath = false
